objects/BoothVisitSummary__c.object
<CustomObject>
    <fields>
        <fullName>AS_ImageUrl__c</fullName>
        <label>ImageUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BVS_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BVS_FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_FollowUps__c</fullName>
        <label>FollowUps</label>
        <picklist>
            <picklistValues>
                <fullName>Send Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active MailingList</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have SalesPerson Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate Contact Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Literature</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BVS_LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_LeadCategory__c</fullName>
        <label>LeadCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_LeadRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LeadRating</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BVS_LeadType__c</fullName>
        <label>LeadType</label>
        <picklist>
            <picklistValues>
                <fullName>ProductLead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceLead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BVS_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BVS_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyAnswer1__c</fullName>
        <label>SurveyAnswer1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyAnswer2__c</fullName>
        <label>SurveyAnswer2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyAnswer3__c</fullName>
        <label>SurveyAnswer3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyQuestion1__c</fullName>
        <defaultValue>&apos;Purchasing Authority ?&apos;</defaultValue>
        <label>SurveyQuestion1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyQuestion2__c</fullName>
        <defaultValue>&apos;Best way of Contact ?&apos;</defaultValue>
        <label>SurveyQuestion2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_SurveyQuestion3__c</fullName>
        <defaultValue>&apos;Product Interest ?&apos;</defaultValue>
        <label>SurveyQuestion3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BVS_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_For_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox For Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <label>Dummy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_AttendeeBarcode__c</fullName>
        <label>AttendeeBarcode</label>
        <referenceTo>Event_Attendee_Mapping__c</referenceTo>
        <relationshipLabel>BoothVisitSummary</relationshipLabel>
        <relationshipName>BoothVisitSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Update__c</fullName>
        <label>Follow UpDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ImageData__c</fullName>
        <label>ImageData</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead_Rating__c</fullName>
        <label>Lead Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mrecordid__c</fullName>
        <description>This is used for the mobile  application record</description>
        <externalId>true</externalId>
        <label>Mrecordid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesForceStatus__c</fullName>
        <label>SalesForceStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScanTime__c</fullName>
        <label>ScanTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ScannedTime__c</fullName>
        <label>ScannedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BoothVisitSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BoothVisitSummary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User_id__c</columns>
        <columns>NAME</columns>
        <columns>EA_AttendeeBarcode__c</columns>
        <columns>ScanTime__c</columns>
        <columns>BVS_FirstName__c</columns>
        <columns>BVS_LastName__c</columns>
        <columns>BVS_Email__c</columns>
        <columns>AS_ImageUrl__c</columns>
        <columns>Mrecordid__c</columns>
        <columns>BVS_Company__c</columns>
        <columns>BVS_FollowUps__c</columns>
        <columns>BVS_LeadCategory__c</columns>
        <columns>AttachmentId__c</columns>
        <columns>Temp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Temp__c</field>
            <operation>equals</operation>
            <value>a00F0000008DyZ0IAK</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GNEMSDC_LEADS</fullName>
        <columns>NAME</columns>
        <columns>BVS_Company__c</columns>
        <columns>BVS_Email__c</columns>
        <columns>BVS_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Temp__c</field>
            <operation>equals</operation>
            <value>a00F0000008ECaeIAG</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>GNEMSDC LEADS</label>
    </listViews>
    <nameField>
        <displayFormat>BVS_{0000000000}</displayFormat>
        <label>BVS_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BoothVisitSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>